//proto code
package game;

enum Code {
    //用户通用协议
    USER_CREATE = 1;    //创建用户
    USER_LOGIN = 2;     //登录
    USER_LOGOUT = 3;    //登出
    USER_ERROR_RET = 4; //错误返回


};

//错误码
enum ErrorCode {
    PROTO_NOT_FOUND = 1; //协议不存在
};
